# iouring-test

./: .gitignore  README.md  benchmark.sh
.github/workflows/: audit.yaml  ci-c.yaml  ci-rust.yaml  ci-zig.yaml
k6/: simple.js
src/epoll/rust/epoll/: Cargo.toml
src/epoll/rust/epoll/src/: main.rs
src/epoll/zig/: build.zig
src/epoll/zig/src/: main.zig
src/iouring/c/: .clang-format  Makefile  compile_commands.json  io_uring.c  server  server.c
src/iouring/rust/iouring/: Cargo.toml
src/iouring/rust/iouring/src/: main.rs
src/iouring/zig/: build.zig
src/iouring/zig/src/: main.zig
