[package]
name = "epoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.11", features = ["net", "os-poll"] }
slab = "0.4.9"

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"
